# Building-Data-Warehouse

./: .gitignore  Dockerfile.superset  README.md  create_database.py  docker-compose.yml  main.py  patch.py  pyproject.toml  start.sh  test.md  test_distribution.py
create_cubes/: create_cubes_order.py  inventory_cubes.py  order_cubes.py
db/clickhouse/: init_dw.sql
db/postgres/: 01_init_vanphong_db.sql  02_init_banhang_db.sql  03_init_idb.sql  README_IDB.md
docs/: CUBE_DATA_DICTIONARY.md  DW_DATA_DICTIONARY.md  INSTRUCTION.md  STACKS.md  note.md
etl/: Dockerfile  README.md  extract.py  load.py  requirements.txt  run_etl.py  transform.py
scripts/: README.INDEX_METADATA.md  create_index.py  create_metadata.py
scripts/create_cubes/: CUBE_GUIDE.md  order_cubes.py
